@startuml

class Inmueble {
    +int Id
    +string Direccion
    +decimal Precio
    +bool Disponible
    +int PropietarioId
    +Propietario Propietario
}

class Propietario {
    +int Id
    +string Nombre
    +string Apellido
    +string Telefono
    +List<Inmueble> Inmuebles
}

class Contrato {
    +int Id
    +DateTime FechaInicio
    +DateTime FechaFin
    +decimal Monto
    +int InmuebleId
    +Inmueble Inmueble
    +int UsuarioId
    +Usuario Usuario
}

class Usuario {
    +int Id
    +string Nombre
    +string Email
    +string Clave
    +List<Contrato> Contratos
}

Propietario "1" --> "0..*" Inmueble
Inmueble "1" --> "0..*" Contrato
Usuario "1" --> "0..*" Contrato

@enduml
